fixed live validation + fontsize form + overlay white + logo visible after review

--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -117,7 +117,6 @@ img {
     }
     .content {
         width: 95%!important;
-        height: 96vh;
     }
     .text-control {
         font-size: 15px!important;
@@ -196,7 +195,7 @@ main {
     height: 100%;
     width: 100%;
     overflow: hidden;
-    background-color: rgba(26, 39, 156, 0.4);
+    background-color: rgb(255 255 255);
 }
 
 .content {
@@ -589,6 +588,17 @@ footer {
     .copyrights {
         margin-top: 50px;
         text-align: center;
+    }
+    .formData[data-error]::after {
+        font-size: 0.5em;
+        line-height: 0.1;
+    }
+    .bground {
+        top: 7.5vh;
+        background-color: unset;
+    }
+    .content {
+        font-size: 10px;
     }
 }
 
